# seldir

./: Cargo.toml  README.md  sd.sh
src/: main.rs
